# flowo

./: .gitignore  DEPLOYMENT.md  DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  start-dev.sh  start-prod.sh
flowo-agno-service/: .env.example  .gitignore  Dockerfile  README.md  agent.py  main.py  pyproject.toml  requirements.txt  settings.yaml  test_import.py  test_service.py  ui_components.py
flowo-agno-service/api/: routes.py
flowo-agno-service/config/: settings.py
flowo-agno-service/core/: __init__.py  agent.py  providers.py
flowo-agno-service/memory/: __init__.py  manager.py
flowo-agno-service/storage/: __init__.py  manager.py
flowo-agno-service/tools/: base.py  flower_tools.py
flowo-backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  go.mod  go.sum  rebuild-be.sh
flowo-backend/cache/: redis_client.go
flowo-backend/cmd/: main.go
flowo-backend/config/: config.go
flowo-backend/database/: db.go
flowo-backend/docs/: API_ORDER.md  API_TESTING_PRODUCT_LISTING.md  AUTHENTICATION_FLOW.md  AUTH_SYSTEM_README.md  PERFORMANCE_REPORT.md  PRD.md  PROJECT_STRUCTURE.md  RECOMMENDATION_ALGORITHMS.md  RECOMMENDATION_SYSTEM.md  VNPAY_API_TESTING_GUIDE.md  VNPAY_PAYMENT_INTEGRATION.md  (+5 more)
flowo-frontend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  database.json  docker-compose.dev.yml  frontend-dev.sh  index.html  nginx.conf  package-lock.json  package.json  postcss.config.mjs  puck.config.tsx  safelist.txt  test.txt  tsconfig.app.json  tsconfig.json  vite.config.ts
(+206 files in other folders)
